--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,2 +1,25 @@
 <h1>Pictures#new</h1>
 <p>Find me in app/views/pictures/new.html.erb</p>
+<%= form_for(@picture) do |f| %>
+<%= f.text_area :description %>
+<%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png' %>
+<%= f.submit "投稿", class: "btn btn-primary" %>
+<% end %>
+
+<!-- jQuery使用 / 5MB以上のアップロード時にアラート -->
+<script type="text/javascript">
+$('#picture_image').bind('change', function() {
+  var size_in_megabytes = this.files[0].size/1024/1024;
+  if (size_in_megabytes > 5) {
+    alert('最大サイズの5MBを超えています。小さいファイルで選択し直して下さい。');
+  }
+});
+</script>
+
+<!-- 仮作成 / 投稿機能確認用 -->
+<% @pictures.each do |picture| %>
+<p>
+<%= picture.description %>
+</p>
+<%= image_tag picture.image.url if picture.image %>
+<% end %>
