--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -2,7 +2,7 @@
 <p>Find me in app/views/pictures/new.html.erb</p>
 <%= form_for(@picture) do |f| %>
 <%= f.text_area :description %>
-<%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png' %>
+<%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png,video/*' %>
 <%= f.submit "投稿", class: "btn btn-primary" %>
 <% end %>
 
@@ -21,5 +21,13 @@ $('#picture_image').bind('change', function() {
 <p>
 <%= picture.description %>
 </p>
-<%= image_tag picture.image.url if picture.image %>
+<% if picture.image? %>
+  <% if picture.image.file.content_type.include?('image/') %>
+    <%= image_tag picture.image.url(:thumb) %>
+  <% else %>
+    <%= video_tag picture.image.url, width: "30%", height: "30%",
+                  controls: true, autobuffer: true %>
+  <% end %>
+<% end %>
+<!-- <%= image_tag picture.image.url if picture.image %> -->
 <% end %>
