Add: 投稿削除機能を追加 / フラッシュメッセージ追加
・投稿毎に投稿削除機能を追加
・フラッシュメッセージの表示をアプリケーションhtmlに追加

--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -20,6 +20,7 @@ $('#picture_image').bind('change', function() {
 <% @pictures.each do |picture| %>
 <p>
 <%= picture.description %>
+<%= link_to "削除", picture_path(picture.id), method: :delete,"data-confirm" => "本当に投稿を削除しますか？", class: "btn btn-danger" %>
 </p>
 <% if picture.image? %>
   <% if picture.image.file.content_type.include?('image/') %>
