--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,40 +32,46 @@ body {
   	z-index:24;
 }
 
-
+/*Login & Signup Form (Start)*/
 .gray-container {
 	background-color: #424242;
 }
-
 .main-container {
 	margin: 0 auto;
 }
-
 .login-title {
 	text-align: center;
 	padding: 25px 0 15px;
 	font-weight: bold;
 	color: #fff;
 }
-
+.signup-title {
+	text-align: center;
+	padding: 25px 0 15px;
+	font-weight: bold;
+	color: #190707;
+}
 .login-box {
 	margin: 0 auto;
 	padding: 20px 32px 40px;
 	width: 400px;
 	border: #D8D8D8 1px solid;
 }
-
+.signup-box {
+	margin: 0 auto;
+	padding: 20px 32px 20px;
+	width: 300px;
+	border: #D8D8D8 1px solid;
+}
 .input-item {
 	width: 100%;
 	height: 40px;
 	margin-bottom: 20px;
 	border-radius: 30px;
 }
-
-.login-center {
+.action-center {
 	text-align: center;
 }
-
 .execution-btn {
 	margin-top:10px;
 	width: 250px;
@@ -94,21 +100,17 @@ body {
 		background-position: 400%;
 	}
 }
-
 .sub-title {
 	letter-spacing: 1px;
 	color: #aaa;
 	margin: 20px;
 }
-
 .sub-title span {
 	padding: 0 20px;
 }
-
 .register-link {
 	text-align: center;
 }
-
 .register-btn {
 	width: 250px;
 	height: 40px;
@@ -117,4 +119,5 @@ body {
 	font-size: 20px;
 	color: white;
 }
+/*Login & Signup Form (End)*/
 
