--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,11 @@
 <header id="header" class="header">
 	<ul class="nav navbar-nav navbar-right">
-		<li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %></li>
-		<li><%= link_to ' 新規登録', new_user_registration_path, class: 'glyphicon glyphicon-edit' %></li>
-        <li><%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in' %></li>
+		<% if user_signed_in? %>
+		    <li><%= "#{current_user.name} 様" %></li>
+			<li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %></li>
+        <% else %>
+        	<li><%= link_to ' 新規登録', new_user_registration_path, class: 'glyphicon glyphicon-edit' %></li>
+        	<li><%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in' %></li>
+        <% end %>
     </ul>
 </header>
