--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
+
+<% @pictures.each do |picture| %>
+<dt><%= picture.description %></dt>
+<% if picture.image? %>
+  <% if picture.image.file.content_type.include?('image/') %>
+    <%= image_tag picture.image.url(:thumb) %>
+  <% else %>
+    <%= video_tag picture.image.url, width: "30%", height: "30%",
+                  controls: true, autobuffer: true %>
+  <% end %>
+<% end %>
+<% end %>
