--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,11 +1,9 @@
-<h1>Users#index</h1>
+<h1>Users#followers</h1>
+<p>Find me in app/views/users/followers.html.erb</p>
+
 <% @users.each do |user| %>
-<table>
-<tr>
-	<th><%= link_to user.name, user%>（名前）</th>
-	<th><%= user.email%>（メルアド）</th>
-</tr>
-    <!-- ここを追加 -->
+  <hr>
+  <p><span>email: </span><%= link_to user.email, user_path(user.id) %></p>
     <% if current_user != user %>
         <% if user.followed_by?(current_user) %>
             <p><%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %></p>
@@ -13,6 +11,4 @@
             <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
         <% end %>
     <% end %>
-    <!-- ここまで -->
-</table>
 <% end %>
