Add: プロフィール編集機能を追加

--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -30,5 +30,5 @@ $('#picture_image').bind('change', function() {
                   controls: true, autobuffer: true %>
   <% end %>
 <% end %>
-<!-- <%= image_tag picture.image.url if picture.image %> -->
+<!-- <%#= image_tag picture.image.url if picture.image %> -->
 <% end %>
