Add: ユーザ編集機能に画像投稿を追加
・プロフィール画像を投稿できるようにUserモデルにも画像投稿機能を追加
・リサイズ機能を設定
・デフォルト画像を設定（プロフィール画像の投稿は任意

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,6 +11,7 @@
 
 <div class="field">
 	<%= f.label :avatar_image %>
+	<%= f.file_field :avatar_image,accept: 'image/jpeg,image/gif,image/png' %>
 </div>
 
 <div class="field">
