Add: マイページのレイアウト追加(途中）
・マイページに表示する画像サイズ変更のため、avatar_imageのリサイズ設定を
400x400から250x250に変更
・マイページ内にヘッダー画像を配置
・グリットシステムを適用

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 
 body {
 	margin-top: 70px;
+	background-color: #fafafa;
 }
 
 .header {
@@ -34,7 +35,7 @@ body {
 
 /*Login & Signup Form (Start)*/
 .gray-container {
-	background-color: #424242;
+	background-color: #fcf8e3;
 }
 .main-container {
 	margin: 0 auto;
@@ -43,7 +44,7 @@ body {
 	text-align: center;
 	padding: 25px 0 15px;
 	font-weight: bold;
-	color: #fff;
+	color: #337ab7;
 }
 .signup-title {
 	text-align: center;
