Add: 各ページに部分テンプレートを追加
・フォローページにmenuとpurofile部分テンプレートを追加
・フォロワーページにmenuとpurofile部分テンプレートを追加
・いいね投稿ページにmenuとpurofile部分テンプレートを追加

--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,6 +1,7 @@
-      <div class="position-change">
-      <%= image_tag @user.avatar_image.url,class: "avatar-image" %>
+<div class="position-change">
+	<%= image_tag @user.avatar_image.url,class: "avatar-image" %>
       <span style="color:#657786;">ユーザネーム</span>
-    <h4><%= @user.name %></h4><span style="color:#657786;"><%= @user.gender %></span>
-<p><%= @user.introduce %></p>
-     </div>
+      <h4><%= @user.name %></h4>
+      <span style="color:#657786;"><%= @user.gender %></span>
+      <p><%= @user.introduce %></p>
+</div>
