--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -1,1 +1,17 @@
+<%= render 'users/menu' %>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-3">
+            <%= render 'users/profile' %>
+        </div>
+        <div class="col-xs-9">
+        	<p>eeeee</p>
+        </div>
+    </div>
+</div>
+
+
+
+
+
 <h1>ああああ</h1>
