--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,3 +1,19 @@
+<%= render 'users/menu' %>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-3">
+            <%= render 'users/profile' %>
+        </div>
+        <div class="col-xs-9">
+        	<p>iiii</p>
+        </div>
+    </div>
+</div>
+
+
+
+
+
 <h1>Users#followers</h1>
 <p>Find me in app/views/users/followers.html.erb</p>
 
