--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
             <%= render 'users/profile' %>
         </div>
         <div class="col-xs-9">
+          <p>aaa</p>
         </div>
     </div>
 </div>
