--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -39,3 +39,17 @@
 	display: block;
 }
 /*マイページ（user_show) ここまで*/
+.flex-container {
+  display: flex;
+  border-bottom: 1px dotted #9d9d9d;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+.flex-item2 {
+	flex-grow: 3;
+	margin-left: 2%;
+}
+.user-name {
+	color:#090909;
+	font-size: 16px;
+}
