Fix: フォロー後のリダイレクト先を変更
・フォローをする、フォローを解除するを実行したときのリダイレクト先をredirect_backに変更

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -51,5 +51,13 @@
 }
 .user-name {
 	color:#090909;
-	font-size: 16px;
+	font-size: 18px;
+}
+.following {
+	display: inline-block;
+	background-color: #158cf3;
+	border: 1px solid #158cf3;
+	padding: 3px;
+	border-radius: 5px;
+	float: right;
 }
