--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -15,12 +15,12 @@
   						<strong><%= link_to user.name, user_path(user.id),class: "user-name" %></strong>
     						<% if current_user != user %>
         						<% if user.followed_by?(current_user) %>
-            						<span><%=link_to "フォロー中", user_relationships_path(user.id), method: :delete %></span>
+            						<span class="following"><%=link_to "フォロー中", user_relationships_path(user.id), method: :delete,"data-confirm" => "本当にフォローを解除しますか？",style: "color:#fff;" %></span>
        				    		<% else %>
             						<span><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></span>
         						<% end %>
     						<% end %>
-    					<p><%= user.introduce %></p>
+    					<p style="padding-top:10px;"><%= user.introduce %></p>
     				</div>
     			</div>
 			<% end %>
