--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-/*マイページ（user_show) */
+/*マイページ共通 */
 .avatar-image {
 	border-radius: 50%;
 }
@@ -38,7 +38,8 @@
 	font-weight: bold;
 	display: block;
 }
-/*マイページ（user_show) ここまで*/
+/*マイページ共通ここまで*/
+/*フォローフォロワー*/
 .flex-container {
   display: flex;
   border-bottom: 1px dotted #9d9d9d;
@@ -61,3 +62,11 @@
 	border-radius: 5px;
 	float: right;
 }
+.to-follow {
+	display: inline-block;
+	border: 1px solid #158cf3;
+	padding: 3px;
+	border-radius: 5px;
+	float: right;
+}
+/*フォローフォロワーここまで*/
