Add: いいね機能に非同期通信機能を追加
・いいね機能に非同期通信で表示が変わるように追加
・リダイレクト先の記述を削除

--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -5,13 +5,7 @@
             <%= render 'users/profile' %>
         </div>
         <div class="col-xs-9">
-        	<p>eeeee</p>
+        	<%= render 'favorites/new' %>
         </div>
     </div>
 </div>
-
-
-
-
-
-<h1>ああああ</h1>
