Add: いいね実行時にCSS変更を追加
・いいね実行時に色が変わるように変更
・いいねページ作成

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -78,3 +78,14 @@
 	width: 275px;
 	text-align: center;
 }
+/*いいね機能の色変更（非同期）*/
+.icolor1 {
+	color: #9405f9;
+}
+.icolor0 {
+	color: #ddd;
+}
+.fabo-style {
+	margin-top: 5px;
+}
+/*いいね機能の色変更（非同期）*/
