--- a/app/views/favorites/_post.html.erb
+++ b/app/views/favorites/_post.html.erb
@@ -1,12 +1,17 @@
+
 <% if user_signed_in? %>
     <% if picture.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
-                  <p><span>お気に入り解除: </span><%=link_to picture.favorites.count, picture_favorites_path(picture.id), method: :delete,remote: true %></p>
-                <% else %>
-                  <p><span>お気に入り登録: </span><%=link_to picture.favorites.count, picture_favorites_path(picture.id), method: :post,remote: true %></p>
-                <% end %>
-              <% else %>
-                  <p><span>お気に入り数: </span><%= picture.favorites.count %></p>
-              <% end %>
+        <%=link_to picture_favorites_path(picture.id), method: :delete,remote: true do %>
+            <span class="icolor1"><i class="fas fa-dragon fa-lg"></i><%= picture.favorites.count %></span>
+        <% end %>
+    <% else %>
+        <%=link_to picture_favorites_path(picture.id), method: :post,remote: true do %>
+            <span class="icolor0"><i class="fas fa-dragon fa-lg"></i><%= picture.favorites.count %></span>
+        <% end %>
+    <% end %>
+<% else %>
+    <p><span>お気に入り数: </span><%= picture.favorites.count %></p>
+<% end %>
 
 
 
