--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,9 +1,22 @@
 <h1>Pictures#new</h1>
 <p>Find me in app/views/pictures/new.html.erb</p>
 <%= form_for(@picture) do |f| %>
-<%= f.text_area :description %>
+<%= f.text_field :title,placeholder: "タイトル" %>
+<%= f.text_area :description,placeholder: "本文" %>
+<%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
+
 <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png,video/*' %>
 <%= f.submit "投稿", class: "btn btn-primary" %>
+<% end %>
+
+<%= form_for(@genre) do |f| %>
+<%= f.text_field :name %>
+<%= f.submit "ジャンル追加", class: "btn btn-primary" %>
+<% end %>
+
+<%= form_with model: @genre do |form| %>
+<%= form.text_field :name %>
+<%= form.submit "ジャンル追加", class: "btn btn-primary" %>
 <% end %>
 
 <!-- jQuery使用 / 5MB以上のアップロード時にアラート -->
