Add: 投稿機能のモーダル表示化を追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .header {
-	background-color: #A9F5E1;
+	background-color: #bdef9233;
 	box-shadow:0 2px 8px rgba(30,30,80,.3);
   	line-height:1;
   	position:fixed;
