--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,6 @@
 <header id="header" class="header">
+	<!-- <%#= render 'pictures/new' %> -->
+
 	<ul class="nav navbar-nav navbar-right">
 		<% if user_signed_in? %>
 		    <li><%= "#{current_user.name} 様" %></li>
