--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header id="header" class="header">
-	<!-- <%#= render 'pictures/new' %> -->
+	<%= render 'pictures/new' %>
 
 	<ul class="nav navbar-nav navbar-right">
 		<% if user_signed_in? %>
