--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Pictures#index</h1>
+<div class="index-container">
+		<h1>Pictures#index</h1>
 <p>Find me in app/views/pictures/index.html.erb</p>
+
+<div class="pictures-flex">
+
+<% @pictures.each do |picture| %>
+
+<div class="picture-item">
+<span><%= picture.created_at.strftime("%Y-%m-%d %H:%M")%></span>
+	<% if picture.image? %>
+  		<% if picture.image.file.content_type.include?('image/') %>
+    		<%= image_tag picture.image.url(:thumb),size: '200x200' %>
+  		<% else %>
+    		<%= video_tag picture.image.url,size: '200x200',
+                  controls: true, autobuffer: true %>
+  		<% end %>
+	<% end %>
+</div>
+
+<% end %>
+</div>
+
+</div>
