Add: 無限スクロールの景観をよくする記述を追加
・ページャの「1.2.3.next」を非表示にする記述を追加
・ローディング画像を追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,4 +120,11 @@ body {
 	color: white;
 }
 /*Login & Signup Form (End)*/
-
+/*無限スクロールでページャ表示を消すため*/
+.page-none {
+	display: none;
+}
+.page-load {
+	text-align: center;
+}
+/*無限スクロールでページャ表示を消すため*/
