Add: スクロール時にローディング画像を追加

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -6,6 +6,6 @@
 		</div>
 	</div>
 </div>
-					<div class="page-load">
-			<%= image_tag "load.gif" %>
-			</div>
+<div class="page-load">
+	<%= image_tag "load.gif",size:'30x30' %>
+</div>
