--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -20,4 +20,21 @@
 
 .saerch-flex {
 	display: flex;
+	padding-top: 15px;
+	padding-bottom: 20px;
+	border-bottom: 1px dashed red;
 }
+.saerch-item {
+	width: 220px;
+	text-align: center;
+}
+/*button_tagのデフォルトcssをリセット*/
+button{
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        padding: 0;
+        appearance: none;
+}
+/*button_tagのデフォルトcssをリセット*/
