--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,7 +1,6 @@
 <div class="position-change">
 	<%= image_tag @user.avatar_image.url,class: "avatar-image" %>
-      <span style="color:#657786;">ユーザネーム</span>
+      <span style="color:#657786;">ユーザネーム (<%= @user.gender %>)</span>
       <h4><%= @user.name %></h4>
-      <span style="color:#657786;"><%= @user.gender %></span>
       <p><%= @user.introduce %></p>
 </div>
