--- a/app/views/pictures/_show.html.erb
+++ b/app/views/pictures/_show.html.erb
@@ -1,10 +1,10 @@
-<!-- モーダル投稿機能-->
-<button type="button" data-toggle="modal" data-focus="true" data-target="#modal-option" class="btn execution-btn" style="width:130px;">新規投稿</button>
-<div class="modal fade" id="modal-option" tabindex="-1" role="dialog">
+<!-- モーダル投稿機能詳細表示-->
+<button type="button" id="btn1" data-toggle="modal" data-focus="true" data-target="#modal-show"></button>
+<div class="modal fade" id="modal-show" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">投稿フォーム</h5>
+        <h5 class="modal-title">わわわあわ</h5>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       </div>
       <div class="modal-body">
