--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,47 +1,35 @@
-<div class="index-container">
-<div class="saerch-flex">
-
-			<div class="saerch-item">
-	<%= link_to  request.path,data: {"turbolinks" => false} do %>
-   <%= image_tag "newform.jpg",size: '200x110'%>
-<% end %>
-</div>
-
-
-
+<div class="picture-container">
+	<div class="saerch-flex">
 		<div class="saerch-item">
-	<%= search_form_for(@search, method: :get)  do |f| %>
-		<%= button_tag type: :submit do %>
-			<%= f.hidden_field :genre_name_eq, value:"犬" %>
-   			<%= image_tag "inuform.jpg",size: '200x110'%>
-   		<% end %>
-	<% end %>
-</div>
-
-<div class="saerch-item">
-	<%= search_form_for(@search, method: :get)  do |f| %>
-		<%= button_tag type: :submit do %>
-			<%= f.hidden_field :genre_name_eq, value:"猫" %>
-   			<%= image_tag "nekoform.jpg",size: '200x110'%>
-   		<% end %>
-	<% end %>
+			<%= link_to  request.path,data: {"turbolinks" => false} do %>
+				<%= image_tag "newform.jpg",size: '200x110'%>
+			<% end %>
+		</div>
+		<div class="saerch-item">
+			<%= search_form_for(@search, method: :get)  do |f| %>
+				<%= button_tag type: :submit do %>
+					<%= f.hidden_field :genre_name_eq, value:"犬" %>
+		   			<%= image_tag "inuform.jpg",size: '200x110'%>
+		   		<% end %>
+			<% end %>
+		</div>
+		<div class="saerch-item">
+			<%= search_form_for(@search, method: :get)  do |f| %>
+				<%= button_tag type: :submit do %>
+					<%= f.hidden_field :genre_name_eq, value:"猫" %>
+		   			<%= image_tag "nekoform.jpg",size: '200x110'%>
+		   		<% end %>
+			<% end %>
+		</div>
+		<div class="saerch-item">
+			<%= search_form_for(@search, method: :get)  do |f| %>
+				<%= button_tag type: :submit do %>
+					<%= f.hidden_field :genre_name_eq, value:"インコ" %>
+	   				<%= image_tag "inkoform.jpg",size: '200x110'%>
+	   			<% end %>
+			<% end %>
+		</div>
 	</div>
-
-	<div class="saerch-item">
-	<%= search_form_for(@search, method: :get)  do |f| %>
-		<%= button_tag type: :submit do %>
-			<%= f.hidden_field :genre_name_eq, value:"インコ" %>
-   			<%= image_tag "inkoform.jpg",size: '200x110'%>
-   		<% end %>
-	<% end %>
-	</div>
-
-
-
-</div>
-
-
-
 	<div id="pictures-flex">
 		<%= render partial: 'picture', collection: @pictures %>
 		<div class="page-none">
