--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -46,19 +46,26 @@ button{
 	width: 400px;
 }
 .picture-header {
-	height: 100px;
+	height: 80px;
+	width: 380px;
 	display: inline-flex;
 	align-items: center;
+	border: double;
 }
 .postname {
 	padding-left: 10px;
+	color: black;
 }
 .picture-description {
-	height: 150px;
-	background-color: red;
+	height: 120px;
+	font-size: 12px;
+	overflow: scroll;
+    border: outset;
+    margin-top: 5px;
 }
 .picture-comment {
-	height: 190px;
-	background-color: blue;
-	margin-top: 10px;
+	height: 230px;
+	font-size: 12px;
+	margin-top: 5px;
+    border: outset;
 }
