--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,12 +8,16 @@
             <div class="post-container">
                 <% @pictures.each do |picture| %>
                     <div class="post-item">
-                        <p><%= picture.created_at.strftime("%Y-%m-%d %H:%M")%></p>
+                        <span style='color:gray;'><%=  time_ago_in_words(picture.created_at)%>前</span>
                         <% if picture.image? %>
                             <% if picture.image.file.content_type.include?('image/') %>
-                                <%= image_tag picture.image.url(:thumb),size: '250x250' %>
+                                <%= link_to picture_path(picture.id) do %>
+                                    <%= image_tag picture.image.url(:thumb),size: '250x250' %>
+                                <% end %>
                             <% else %>
-                                <%= video_tag picture.image.url,size: '250x250',controls: true, autobuffer: true %>
+                                <%= link_to picture_path(picture.id) do %>
+                                    <%= video_tag picture.image.url,size: '250x250',controls: true, autobuffer: true %>
+                                <% end %>
                             <% end %>
                         <% end %>
                         <!-- JSファイルを呼び出し -->
